[package]
name = "monero-serai-mirror"
version = "0.1.4-alpha"
description = "A modern Monero transaction library.  Mirrored by sneurlax from serai for downstream crate-publishing purposes until serai publishes their crates; use the versions from serai in production.  This crate will be unpublished/deleted as soon as possible."
license = "MIT"
repository = "https://github.com/serai-dex/serai/tree/develop/coins/monero"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
futures = "0.3"

lazy_static = "1"
async-trait = "0.1"
thiserror = "1"

rand_core = "0.6"
rand_chacha = "0.3"
rand = "0.8"
rand_distr = "0.4"

zeroize = { version = "^1.5", features = ["zeroize_derive"] }
subtle = "^2.4"

crc = "3"
sha3 = "0.10"

curve25519-dalek = { version = "^3.2", features = ["std"] }

group = "0.13"
dalek-ff-group = { package = "dalek-ff-group-mirror", path = "../../crypto/dalek-ff-group", version = "0.3" }
multiexp = { package = "multiexp-mirror", path = "../../crypto/multiexp", version = "0.3", features = ["batch"] }

transcript = { package = "flexible-transcript-mirror", path = "../../crypto/transcript", version = "0.3", features = ["recommended"], optional = true }
frost = { package = "modular-frost-mirror", path = "../../crypto/frost", version = "0.7", features = ["ed25519"], optional = true }
dleq = { package = "dleq-mirror", path = "../../crypto/dleq", version = "0.3", features = ["serialize"], optional = true }

monero-generators = { package = "monero-generators-mirror", path = "generators", version = "0.3" }

hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

base58-monero = "1"
monero-epee-bin-serde = "1"

digest_auth = "0.3"
reqwest = { version = "0.11", features = ["json"] }

[build-dependencies]
dalek-ff-group = { package = "dalek-ff-group-mirror", path = "../../crypto/dalek-ff-group", version = "0.3" }
monero-generators = { package = "monero-generators-mirror", path = "generators", version = "0.3" }

[dev-dependencies]
hex-literal = "0.4"

tokio = { version = "1", features = ["full"] }
monero-rpc = "0.3"

frost = { package = "modular-frost-mirror", path = "../../crypto/frost", version = "0.7", features = ["tests"] }

[features]
multisig = ["transcript", "frost", "dleq"]
