[package]
name = "dkg-mirror"
version = "0.4.0"
description = "Distributed key generation over ff/group.  Mirrored by sneurlax from serai for downstream crate-publishing purposes until serai publishes their crates; use the versions from serai in production.  This crate will be unpublished/deleted as soon as possible."
license = "MIT"
repository = "https://github.com/serai-dex/serai/tree/develop/crypto/dkg"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = ["dkg", "multisig", "threshold", "ff", "group"]
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
thiserror = { version = "1", default-features = false, optional = true }

rand_core = { version = "0.6", default-features = false }

zeroize = { version = "^1.5", default-features = false, features = ["zeroize_derive"] }

std-shims = { version = "0.1", path = "../../common/std-shims", package = "std-shims-mirror", default-features = false }

serde = { version = "1", features = ["derive"], optional = true }

transcript = { package = "flexible-transcript-mirror", path = "../transcript", version = "0.3", default-features = false, features = ["recommended"] }
chacha20 = { version = "0.9", default-features = false, features = ["zeroize"] }

ciphersuite = { path = "../ciphersuite", package = "ciphersuite-mirror", version = "0.3", default-features = false }
multiexp = { path = "../multiexp", package = "multiexp-mirror", version = "0.3", default-features = false }

schnorr = { package = "schnorr-signatures-mirror", path = "../schnorr", version = "0.4", default-features = false }
dleq = { path = "../dleq", package = "dleq-mirror", version = "0.3", default-features = false }

[dev-dependencies]
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
ciphersuite = { path = "../ciphersuite", package = "ciphersuite-mirror", version = "0.3", default-features = false, features = ["ristretto"] }

[features]
std = [
  "thiserror",
  "rand_core/std",

  "std-shims/std",

  "ciphersuite/std",

  "multiexp/batch",
  "multiexp/std",

  "schnorr/std",
  "dleq/serialize"
]
serde = ["dep:serde"]
tests = ["rand_core/getrandom"]
default = ["std"]
