[package]
name = "modular-frost-mirror"
version = "0.7.0"
description = "Modular implementation of FROST over ff/group.  Mirrored by sneurlax from serai for downstream crate-publishing purposes until serai publishes their crates; use the versions from serai in production.  This crate will be unpublished/deleted as soon as possible."
license = "MIT"
repository = "https://github.com/serai-dex/serai/tree/develop/crypto/frost"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = ["frost", "multisig", "threshold"]
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
thiserror = "1"

rand_core = "0.6"
rand_chacha = "0.3"

zeroize = { version = "^1.5", features = ["zeroize_derive"] }
subtle = "^2.4"

hex = { version = "0.4", optional = true }

digest = "0.10"
transcript = { package = "flexible-transcript-mirror", path = "../transcript", version = "0.3", features = ["recommended"] }

dalek-ff-group = { package = "dalek-ff-group-mirror", path = "../dalek-ff-group", version = "0.3", optional = true }
minimal-ed448 = { package = "minimal-ed448-mirror", path = "../ed448", version = "0.3", optional = true }

ciphersuite = { package = "ciphersuite-mirror", path = "../ciphersuite", version = "0.3", features = ["std"] }

multiexp = { package = "multiexp-mirror", path = "../multiexp", version = "0.3", features = ["batch"] }

schnorr = { package = "schnorr-signatures-mirror", path = "../schnorr", version = "0.4" }
dleq = { package = "dleq-mirror", path = "../dleq", version = "0.3", features = ["serialize"] }

dkg = { path = "../dkg", package = "dkg-mirror", version = "0.4" }

[dev-dependencies]
hex = "0.4"
serde_json = "1"

dkg = { path = "../dkg", package = "dkg-mirror", version = "0.4", features = ["tests"] }

[features]
ed25519 = ["dalek-ff-group", "ciphersuite/ed25519"]
ristretto = ["dalek-ff-group", "ciphersuite/ristretto"]

secp256k1 = ["ciphersuite/secp256k1"]
p256 = ["ciphersuite/p256"]

ed448 = ["minimal-ed448", "ciphersuite/ed448"]

tests = ["hex", "rand_core/getrandom", "dkg/tests"]
