[package]
name = "multiexp-mirror"
version = "0.3.1"
description = "Multiexponentation algorithms for ff/group.  Mirrored by sneurlax from serai for downstream crate-publishing purposes until serai publishes their crates; use the versions from serai in production.  This crate will be unpublished/deleted as soon as possible."
license = "MIT"
repository = "https://github.com/serai-dex/serai/tree/develop/crypto/multiexp"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = ["multiexp", "ff", "group"]
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
rustversion = "1"

std-shims = { package = "std-shims-mirror", path = "../../common/std-shims", version = "0.1", default-features = false }

zeroize = { version = "^1.5", default-features = false, features = ["zeroize_derive"] }

ff = { version = "0.13", default-features = false, features = ["bits"] }
group = { version = "0.13", default-features = false }

rand_core = { version = "0.6", default-features = false, optional = true }

[dev-dependencies]
rand_core = { version = "0.6", features = ["std"] }

k256 = { version = "^0.13.1", default-features = false, features = ["arithmetic", "bits"] }
dalek-ff-group-mirror = { path = "../dalek-ff-group", version = "0.3.0" }

[features]
std = ["std-shims/std"]

batch = ["rand_core"]

default = ["std"]
