[package]
name = "schnorr-signatures-mirror"
version = "0.4.0"
description = "Minimal Schnorr signatures crate hosting common code.  Mirrored by sneurlax from serai for downstream crate-publishing purposes until serai publishes their crates; use the versions from serai in production.  This crate will be unpublished/deleted as soon as possible."
license = "MIT"
repository = "https://github.com/serai-dex/serai/tree/develop/crypto/schnorr"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = ["schnorr", "ff", "group"]
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
std-shims = { path = "../../common/std-shims", package = "std-shims-mirror", version = "0.1", default-features = false }

rand_core = { version = "0.6", default-features = false }

zeroize = { version = "^1.5", default-features = false, features = ["zeroize_derive"] }

transcript = { package = "flexible-transcript", path = "../transcript", version = "0.3", default-features = false }

ciphersuite = { path = "../ciphersuite", package = "ciphersuite-mirror", version = "0.3", default-features = false, features = ["alloc"] }
multiexp = { path = "../multiexp", package = "multiexp-mirror", version = "0.3", default-features = false, features = ["batch"] }

[dev-dependencies]
hex = "0.4"

rand_core = { version = "0.6", features = ["std"] }

sha2 = "0.10"

dalek-ff-group = { path =  "../dalek-ff-group", package = "dalek-ff-group-mirror", version = "0.3" }
ciphersuite = { path = "../ciphersuite", package = "ciphersuite-mirror", version = "0.3.1", features = ["ed25519"] }

[features]
std = ["std-shims/std", "ciphersuite/std"]
default = ["std"]
