[package]
name = "monero-generators-mirror"
version = "0.3.0"
description = "Monero's hash_to_point and generators.  Mirrored by sneurlax from serai for downstream crate-publishing purposes until serai publishes their crates; use the versions from serai in production.  This crate will be unpublished/deleted as soon as possible."
license = "MIT"
repository = "https://github.com/serai-dex/serai/tree/develop/coins/monero/generators"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
std-shims = { package = "std-shims-mirror", path = "../../../common/std-shims", version = "0.1", default-features = false }

lazy_static = "1"

subtle = { version = "^2.4", default-features = false }

sha3 = { version = "0.10", default-features = false }

curve25519-dalek = { version = "3", default-features = false }

group = { version = "0.13", default-features = false }
dalek-ff-group = { package = "dalek-ff-group-mirror", path = "../../../crypto/dalek-ff-group", version = "0.3" }

[features]
alloc = ["lazy_static/spin_no_std"]
std = ["std-shims/std"]
default = ["std"]
